[package]
name = "deadlocker_derive"
version = "0.1.0"
edition = "2021"
authors = ["Stefan Mack <developer@mack.aleeas.com>"]
categories = ["synchronization", "lock", "mutex"]
description = "Macro implementation for #[derive(Locker)]"
documentation = "https://docs.rs/deadlocker_derive"
homepage = "https://github.com/Areskiko/deadlocker"
keywords = ["mutex", "lock", "deadlock", "deadlocker", "derive"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Areskiko/deadlocker"
rust-version = "1.65"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
itertools = "0.12"
regex = "1.10"

[dev-dependencies]
deadlocker = { version = "0", path = "../deadlocker" }
